6/16/17 v2 - Continued design work. First try at getting a reasonable side bar style ui. \n
6/15/17 v1 - Initial setup for the website and started messing around with material design. \n