@@ -11,16 +11,59 @@
         <title>WebModeler Beta</title>
 </head>
 <body>
-        <nav id="mainNavbar">
-                <div class="nav-wrapper">
+        <nav id="mainNavbar" class="navbar-fixed" style="z-index:10;">
+                <div class="nav-wrapper fixed">
                         <a href="#" class="brand-logo">WebModeler</a>
-                        <ul id="nav-mobile" class="right hide-on-med-and-down">
+                        <ul class="right">
                                 <li><a href="sass.html">Project Background</a></li>
                                 <li><a id="changelogButton">Changelog</a></li>
                                 <li><a href="https://github.com/thenellt/WebModeler" target="_blank">Github</a></li>
                         </ul>
                 </div>
         </nav>
+
+        <div class="tab">
+                <button class="tablinks" onclick="changeTab(event, 'getStarted')">Get Started</button>
+                <button class="tablinks" onclick="changeTab(event, 'popSetup')" id="defaultOpen">Setup Populations</button>
+                <button class="tablinks" onclick="changeTab(event, 'page2')">Settings</button>
+                <button class="tablinks" onclick="changeTab(event, 'page2')">Advanced Settings</button>
+                <button class="tablinks" onclick="changeTab(event, 'page3')">Simulation Parameters</button>
+                <div class="fillertab"></div>
+        </div>
+
+        <div class="tabcontent" id="popSetup">
+                <table style="width:100%; height:95%; margin: 0px">
+                        <tr>
+                                <th style ="width:10%">
+                                        <h3>Set the Map Center:</h3>
+                                        <table>
+                                        <tr>
+                                                <th>Latitude: <input type="text" id="lat"></th>
+                                                <th>Longitude: <input type="text" id="long"></th>
+                                        </tr>
+                                        </table>
+                                        <button type="button" id="updateButton">Update Map</button>
+                                        <h3>Add point:</h3>
+                                        <table>
+                                        <tr>
+                                                <th>Latitude: <input type="text" id="addLat"></th>
+                                                <th>Longitude: <input type="text" id="addLong"></th>
+                                        </tr>
+                                        </table>
+                                        <button type="button" id="addPointButton">Add</button>
+                                </th>
+                                <th>
+                                        <div id="map" class="map"></div>
+                                </th>
+                        </tr>
+                        <tr>
+                                <th>
+                                        <button type="button" id="reset">Reset</button>
+                                        <button type="button" id="extent">Update Extent</button>
+                                </th>
+                        </tr>
+                </table>
+        </div>
 
         <div id="changelog">
                 <div class="card blue-grey lighten-4" style="height: 90%;">
@@ -30,36 +73,9 @@
                         </div>
                 </div>
         </div>
-
-        <table style="width:100%; height:95%; margin: 0px">
-                <tr>
-                        <th style ="width:10%">
-                                <h3>Set the Map Center:</h3>
-                                <table>
-                                <tr>
-                                        <th>Latitude: <input type="text" id="lat"></th>
-                                        <th>Longitude: <input type="text" id="long"></th>
-                                </tr>
-                                </table>
-                                <button type="button" id="updateButton">Update Map</button>
-                                <h3>Add point:</h3>
-                                <table>
-                                <tr>
-                                        <th>Latitude: <input type="text" id="addLat"></th>
-                                        <th>Longitude: <input type="text" id="addLong"></th>
-                                </tr>
-                                </table>
-                                <button type="button" id="addPointButton">Add</button>
-                        </th>
-                        <th>
-                                <div id="map" class="map"></div>
-                        </th>
-                </tr>
-        </table>
         <div id="hidepage"></div>
-        <button type="button" id="reset">Reset</button>
-        <button type="button" id="extent">Update Extent</button>
         <script src="js/input.js" type="text/javascript"></script>
-        <script src="js/pageInteraction.js" type="text/javascript"></script>
+        <script src="js/changelog.js" type="text/javascript"></script>
+        <script src="js/tabs.js" type="text/javascript"></script>
 </body>
 </html>
